--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,8 +1,8 @@
 .cover__overlay {
   background-image: url(../../../images/cover-trains.jpg);
   background-size: cover;
+  background-position: center;
   height: 100%;
-  max-height: 740px;
   align-items: center;
   justify-content: center;
 }
