--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -11,6 +11,14 @@
   min-width: calc(1.25em + 0.75em + 1.25em);
 }
 
+@media screen and (min-width: 425px) and (max-width: 767px) {
+  .header__lang-links {
+    padding-bottom: 10px;
+    font-size: 18px;
+    line-height: 1.11;
+}
+}
+
 @media screen and (max-width: 425px) {
   .header__lang-links {
     padding-bottom: 8px;
