--- a/blocks/subtitle/subtitle.css
+++ b/blocks/subtitle/subtitle.css
@@ -6,17 +6,17 @@
   color: #ffffff;
   text-align: center;
   margin: 0 auto 64px;
+  max-width: 640px;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .subtitle {
-    width: 40rem;
     margin-bottom: 56px;
     margin: 0 calc((100% - 640px) / 2) 56px;
   }
 }
 
-@media screen and (min-width: 425px) and (max-width: 768px) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
   .subtitle {
     font-size: 3.8vw;
     max-width: 80%;
