--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -10,6 +10,13 @@
   max-width: 11.62rem;
 }
 
+@media screen and (min-width: 425px) and (max-width: 1024px) {
+  .footer__copyright {
+   margin-bottom: 24px;
+}
+}
+
+
 @media screen and (max-width: 425px) {
   .footer__copyright {
     margin-bottom: 24px;
