--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -8,7 +8,7 @@
   align-content: center;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 768px) {
   .footer__links {
     box-sizing: border-box;
     display: grid;
@@ -20,5 +20,6 @@
     list-style-type: none;
     font-size: 24px;
     max-width: calc(100% - 32px);
+    margin-bottom: 32px;
   }
 }
