--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -11,7 +11,7 @@
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .intro__text {
-    width: 93.75%;
+    max-width: 93.75%;
   }
 }
 
