--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -14,6 +14,7 @@
 @media screen and (min-width: 425px) and (max-width: 1023px) {
   .lead__caption {
     padding-left: 24px;
+    width: 93.75%;
   }
 }
 
