--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -29,7 +29,7 @@
 @media screen and (max-width: 425px) {
   .places__image {
     width: 100%;
-    object-fit: cover;
+    object-fit: contain;
     margin: 0;
     padding: 0;
   }
